exports[`test A mixture of emoji syntax 1`] = `
<span>
  This 
  <img
    className={undefined}
    src="http://twemoji.maxcdn.com/2/72x72/1f468-1f3fd.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is 
  <img
    className={undefined}
    src="http://twemoji.maxcdn.com/2/72x72/1f44c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`test Aliases containing underscores 1`] = `
<span>
  <img
    className={undefined}
    src="http://twemoji.maxcdn.com/2/72x72/1f61c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   wow
</span>
`;

exports[`test Aliases with skin tone modifiers 1`] = `
<span>
  Say hello to 
  <img
    className={undefined}
    src="http://twemoji.maxcdn.com/2/72x72/1f469-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`test Ascii aliases 1`] = `
<span>
  That\'s awesome
  <img
    className={undefined}
    src="http://twemoji.maxcdn.com/2/72x72/1f603.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`test Does nothing to unknown aliases 1`] = `
<span>
  An :unknown: alias
</span>
`;

exports[`test Emoji with a multiple codepoints 1`] = `
<span>
  Great work 
  <img
    className={undefined}
    src="http://twemoji.maxcdn.com/2/72x72/1f44d-1f3fe.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   
  <img
    className={undefined}
    src="http://twemoji.maxcdn.com/2/72x72/1f468-200d-1f469-200d-1f467-200d-1f466.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`test Emoji with a single codepoint 1`] = `
<span>
  This 
  <img
    className={undefined}
    src="http://twemoji.maxcdn.com/2/72x72/2764.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is 
  <img
    className={undefined}
    src="http://twemoji.maxcdn.com/2/72x72/1f44c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`test Emojione 1`] = `
<span>
  Hola 
  <img
    className={undefined}
    src="http://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f469-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    className={undefined}
    src="http://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f604.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`test Simple aliases 1`] = `
<span>
  This 
  <img
    className={undefined}
    src="http://twemoji.maxcdn.com/2/72x72/1f604.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is nice 
  <img
    className={undefined}
    src="http://twemoji.maxcdn.com/2/72x72/1f4a9.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`test Strings with no emoji 1`] = `
<span>
  Facebook
</span>
`;
